up until Picking up items

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
   <img id="inn" src="doesnt-matter" alt="dunno" onclick="rest(hero)">
-  
+  <img id="dagger" src="bla-die-bla" alt="dagger" onclick="pickUpItem()">
 
 
 
