--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
   <img id="inn" src="doesnt-matter" alt="dunno" onclick="rest(hero)">
-  <img id="dagger" src="bla-die-bla" alt="dagger" onclick="pickUpItem(dagger)">
-
+  <img id="dagger" src="bla-die-bla" alt="dagger" onclick="pickUpItem(hero, newWeapon)">
+  <img id="bag" rc="joehoe" alt="bag" onclick="equipWeapon(hero)">
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
