added style sheet etc

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta charset="utf-8">
     <title>Mocha Tests</title>
     <link href="https://unpkg.com/mocha@4.0.1/mocha.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <img id="inn" src="doesnt-matter" alt="dunno" onclick="rest(hero)">
-  <img id="dagger" src="bla-die-bla" alt="dagger" onclick="pickUpItem(hero, newWeapon)">
-  <img id="bag" rc="joehoe" alt="bag" onclick="equipWeapon(hero)">
+  <img id="inn" class='img' src="img/health.jpeg" alt="health" onclick="rest(hero)">
+  <img id="dagger" class='img'src="img/dagger.png" alt="dagger" onclick="pickUpItem(hero, newWeapon)">
+  <img id="bag" class='img' src="img/bag.png" alt="bag" onclick="equipWeapon(hero)">
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
