--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-  <img id="inn" class='img' src="img/health.jpeg" alt="health" onclick="rest(hero)">
-  <img id="dagger" class='img'src="img/dagger.png" alt="dagger" onclick="pickUpItem(hero, newWeapon)">
-  <img id="bag" class='img' src="img/bag.png" alt="bag" onclick="equipWeapon(hero)">
+  <img id="inn" class="img" src="img/health.jpeg" alt="health" onclick="rest(hero)">
+  <img id="dagger" class="img" src="img/dagger.png" alt="dagger" onclick="pickUpItem(hero, newWeapon)">
+  <img id="bag" class="img" src="img/bag.png" alt="bag" onclick="equipWeapon(hero)">
+
+  <div id="herostats" class ="showStats"> Your hero: </div>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
